--- a/readme.org
+++ b/readme.org
@@ -6,29 +6,20 @@ Ref: https://openchargealliance.org/
 
 ** Installation
 
-TODO: Replace
-=UPDATE_WITH_YOUR_GEM_NAME_IMMEDIATELY_AFTER_RELEASE_TO_RUBYGEMS_ORG=
-with your gem name right after releasing it to RubyGems.org. Please do
-not do it earlier due to security reasons. Alternatively, replace this
-section with instructions to install your gem from git if you don't plan
-to release to RubyGems.org.
-
 Install the gem and add to the application's Gemfile by executing:
 
 #+begin_example
-$ bundle add UPDATE_WITH_YOUR_GEM_NAME_IMMEDIATELY_AFTER_RELEASE_TO_RUBYGEMS_ORG
+$ bundle add ocpp
 #+end_example
 
 If bundler is not being used to manage dependencies, install the gem by
 executing:
 
 #+begin_example
-$ gem install UPDATE_WITH_YOUR_GEM_NAME_IMMEDIATELY_AFTER_RELEASE_TO_RUBYGEMS_ORG
+$ gem install ocpp
 #+end_example
 
 ** Usage
-
-
 
 ** Development
 
